# ecco

./: .gitignore  .gitmodules  AGENTS.md  Build_halflife.props  Build_svencoop.props  CEccoBackExcutor.cpp  CEccoBackExcutor.h  CEccoBackExecutor.cpp  CMakeLists.txt  LICENSE  README.md  ecco.sln  ecco.vcxproj  ecco.vcxproj.filters  exports.def  linux_build.sh  linux_init.sh  win_build.ps1  win_init.ps1
.github/workflows/: release.yml
angelscript/: CMakeLists.txt  angelscript.vcxproj  angelscript.vcxproj.filters  plugin.cpp
angelscript/angelscript/: angelscript.cpp  angelscript.hpp  angelscriptlib.h
base/: CMakeLists.txt  base.vcxproj  base.vcxproj.filters  plugin.cpp  plugin.h  sdk_api.h
ecco/: Build.props  Build_template.props  CMakeLists.txt  build.ps1  ecco.vcxproj  ecco.vcxproj.filters  init.ps1  linux_init.sh  win_build.ps1  win_init.ps1
ecco/include/api/: HookDef.h  IEccoBaseExcutor.h  IEccoFuncs.h  IEccoPlugin.h  IEccoScriptSystem.h  IPlayerStorageItem.h
ecco/package/: Config.toml
ecco/package/lang/: cn.toml  english.toml  spanish.toml  user_setting.toml
ecco/package/scripts/: example.toml  item_battery.toml  item_healthkit.toml  weapon_357.toml  weapon_9mmAR.toml  weapon_9mmhandgun.toml  weapon_crossbow.toml  weapon_crowbar.toml  weapon_displacer.toml  weapon_eagle.toml  weapon_egon.toml  weapon_gauss.toml  weapon_glock.toml  weapon_grapple.toml  weapon_handgrenade.toml  weapon_hornetgun.toml  weapon_m16.toml  weapon_m249.toml  weapon_medkit.toml  weapon_minigun.toml  weapon_mp5.toml  weapon_pipewrench.toml  weapon_rpg.toml  weapon_satchel.toml  weapon_shockrifle.toml  weapon_shotgun.toml  weapon_snark.toml  weapon_sniperrifle.toml  weapon_sporelauncher.toml  weapon_tripmine.toml  weapon_uzi.toml
ecco/src/: CEccoFuncs.cpp  CEccoFuncs.h  dllapi.cpp  engine_api.cpp  meta_api.cpp  meta_utility.cpp  meta_utility.h  signatures.h
ecco/src/angelscript/: angelscript.cpp  angelscript.hpp  angelscriptlib.h
ecco/src/command/: CEccoBaseCommand.cpp  CEccoBaseCommand.h  CEccoClientCommand.cpp  CEccoClientCommand.h  CEccoServerCommand.cpp  CEccoServerCommand.h  command_system.h  commands.cpp
ecco/src/config/: CConfig.cpp  CConfig.h
ecco/src/hud/: CHudNumber.cpp  CHudNumber.h  hud.cpp
ecco/src/lang/: lang.cpp  lang.h
ecco/src/menu/: MenuParser.cpp  MenuParser.h
ecco/src/menu/executor/: CBaseEccoExecutor.cpp  CBaseEccoExecutor.h  CEccoBackExecutor.cpp  CEccoBackExecutor.h  CEccoScriptExecutor.cpp  CEccoScriptExecutor.h  CEccoTextMenuExecutor.cpp  CEccoTextMenuExecutor.h
ecco/src/plugin/: hook.cpp  plugin_system.cpp  plugin_system.h
ecco/src/scripts/: CEccoScriptItem.cpp  CEccoScriptItem.h  CEccoScriptSystem.cpp  CEccoScriptSystem.h  basescriptmethods.h  script_system.cpp  script_system.h  tclDecls_dynamic.h  tcl_dynamic.h  tcl_loader.cpp  tcl_loader.h
ecco/src/storage/: CPlayerStorageItem.cpp  CPlayerStorageItem.h  ScopedFile.h  Storage.cpp  Storage.h
ecco/src/timer/: Timer.cpp  Timer.h
package/lang/: cn.toml  en.toml  user_setting.toml
package/scripts/: example.toml
src/: CBaseEccoExcuter.cpp  CBaseEccoExcuter.h  CBaseEccoExecutor.cpp  CBaseEccoExecutor.h  CConfig.cpp  CConfig.h  CEccoBackExecutor.h  CEccoExitExcutor.cpp  CEccoExitExcutor.h  CEccoExitExecutor.cpp  CEccoExitExecutor.h  CEccoExitItem.cpp  CEccoExitItem.h  CEccoMenu.cpp  CEccoMenu.h  CEccoMenuItem.hpp  CEccoMenuTerminal.h  CEccoScriptExcutor.cpp  CEccoScriptExcutor.h  CEccoScriptExecutor.cpp  CEccoScriptExecutor.h  CEccoScriptItem.cpp  CEccoScriptItem.h  CEccoTextMenu.cpp  CEccoTextMenu.h  CEccoTextMenuExcutor.cpp  CEccoTextMenuExcutor.h  CEccoTextMenuExecutor.cpp  CEccoTextMenuExecutor.h  CPlayerStorageItem.cpp  CPlayerStorageItem.h  IEccoExcuter.h  MenuParser.cpp  MenuParser.h  Storage.cpp  Storage.h  angelscript.cpp  angelscript.hpp  dllapi.cpp  engine_api.cpp  (+9 more)
src/angelscript/: angelscript.cpp  angelscript.hpp
src/command/: CEccoBaseCommand.cpp  CEccoBaseCommand.h  CEccoClientCommand.cpp  CEccoClientCommand.h  CEccoServerCommand.cpp  CEccoServerCommand.h  command_system.h  commands.cpp
src/config/: CConfig.cpp  CConfig.h
src/hud/: CHudNumber.cpp  CHudNumber.h  hud.cpp  hud.h
src/lang/: lang.cpp  lang.h
src/menu/: MenuParser.cpp
src/menu/executor/: CBaseEccoExecutor.cpp  CEccoBackExecutor.cpp  CEccoScriptExecutor.cpp  CEccoScriptExecutor.h  CEccoTextMenuExecutor.cpp  CEccoTextMenuExecutor.h
src/scripts/: CEccoScriptItem.cpp  basescriptmethods.cpp  basescriptmethods.h  script_system.cpp  script_system.h
src/storage/: CPlayerStorageItem.cpp  CPlayerStorageItem.h
src/timer/: Timer.cpp  Timer.h
wiki/: script-guide-en.md  script-guide.md  toml-guide-en.md  toml-guide.md
